--- a/test/fixtures/ideas.yml
+++ b/test/fixtures/ideas.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  body: MyText
-  quality: 1
+  title: First Idea
+  body: Create world peace
+  quality: 2
 
 two:
-  title: MyString
-  body: MyText
-  quality: 1
+  title: Second Idea
+  body: Buy more potato chips
+  quality: 0
