--- a/test/fixtures/ideas.yml
+++ b/test/fixtures/ideas.yml
@@ -3,9 +3,9 @@
 one:
   title: First Idea
   body: Create world peace
-  quality: 2
+  quality: 'high'
 
 two:
   title: Second Idea
   body: Buy more potato chips
-  quality: 0
+  quality: 'low'
