--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: First Idea
+  title: First Task
   body: Create world peace
-  quality: 'high'
 
 two:
-  title: Second Idea
+  title: Second Task
   body: Buy more potato chips
-  quality: 'low'
